--- a/src/App.css
+++ b/src/App.css
@@ -1,52 +1,52 @@
-.app__center{
+.app__center {
   text-align: center;
   margin-bottom: 2rem;
 }
 
-.app__pos-center{
+.app__pos-center {
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
 
-.app__name{
+.app__name {
   font-family: var(--font-base);
   font-weight: bold;
 }
 
-.app__cafe-detail{
+.app__cafe-detail {
   text-align: center;
 }
 
-.app__cafe-detail a{
-    text-align: center;
-    display: block;
-    margin: 3px 0 0 0;
-    font-family: var(--font-base);
-    font-style: normal;
-    font-size: 14px;
-    line-height: 17px;
-    color: #4289C7;
+.app__cafe-detail a {
+  text-align: center;
+  display: block;
+  margin: 3px 0 0 0;
+  font-family: var(--font-base);
+  font-style: normal;
+  font-size: 14px;
+  line-height: 17px;
+  color: #4289c7;
 }
 
-.Menus{
+.Menus {
   font-family: var(--font-base);
   font-style: normal;
   font-size: 18px;
 }
 
-.menu__dropdown{
+.menu__dropdown {
   padding: 14px;
 }
 
-.menu__item{
+.menu__item {
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 15px;
   padding: 0 15px;
 }
 
-.menu__item img{
+.menu__item img {
   width: 80px;
   height: 80px;
   object-fit: cover;
@@ -55,11 +55,11 @@
   flex-basis: 80px;
 }
 
-.menu__item .menu__detail{
+.menu__item .menu__detail {
   flex: 1;
 }
 
-.menu__item .menu__detail .menu__title{
+.menu__item .menu__detail .menu__title {
   font-family: var(--font-base);
   font-weight: bold;
   display: flex;
@@ -67,7 +67,7 @@
   justify-content: space-between;
 }
 
-.menu__item .menu__detail .menu__desc{
+.menu__item .menu__detail .menu__desc {
   font-family: var(--font-base);
   font-style: normal;
   font-weight: 500;
@@ -78,8 +78,7 @@
 }
 
 /* <select> styles  */
-select{
-  
+select {
   appearance: none;
   border: 0;
   outline: 0;
@@ -100,6 +99,6 @@ option {
   font-weight: bold;
 }
 
-label{
+label {
   align-items: center;
 }
